--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<!doctype>
+<!doctype html>
 <html>
-<head></head><body>
-<h1>my first website</h1>
+<head>
+  <meta charset="utf-8">
+  </head><body>
+<h1>资源汇总网站</h1>
+  <nav><a>漫画</a></nav>
 </body>
 </html>
