--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head><body>
 <h1>资源汇总网站</h1>
   <nav><a>漫画</a></nav>
-  <audio src="" controls="controls"></audio>
+  <audio src="s.mp3" controls="controls"></audio>
 </body>
 </html>
