--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <style>nav{
+             background:green;
+    }
+  a{
+    display:inline-block;
+    }</style>
   </head><body>
 <h1>资源汇总网站</h1>
   <nav><a>漫画</a></nav>
