--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     }</style>
   </head><body>
 <h1>资源汇总网站</h1>
-  <nav><a>漫画</a></nav>
+  <nav>
+       <a>漫画</a>
+       <a></a>
+       <a></a>
+       <a></a>
+  </nav>
   <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio>
 </body>
 </html>
