--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     }
   a{
     display:inline-block;
+    }
+    h1{
+      border-buttom:1px solid green;
     }</style>
   </head><body>
-<h1>资源汇总网站</h1>
+<h1 align="center">资源汇总网站</h1>
   <nav>
        <a>漫画</a>
        <a>软件</a>
