--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     }
   a{
     display:inline-block;
+    width:400px;
+    height:100px;
+    background:rgb(225,115,115);
+    }
+    a:hover{
+            background:rgba(0,0,0,0.5);
     }
     h1{
       border-buttom:1px solid green;
