--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background:rgba(0,0,0,0.5);
     }
     h1{
-      border-buttom:1px solid green;
+      border-bottom:1px solid green;
     }</style>
   </head><body>
 <h1 align="center">资源汇总网站</h1>
@@ -23,7 +23,7 @@
        <a>漫画</a>
        <a>软件</a>
        <a></a>
-       <a></a>
+       <a>midi资源网站</a>
   </nav>
   <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio>
 </body>
