--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <a>漫画</a>
        <a>软件</a>
        <a></a>
-       <a href="http://www.midishow.com">midi资源网站</a>
+       <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
   </nav>
   <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio>
 </body>
