--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     width:400px;
     height:100px;
     background:rgb(225,115,115);
+    align:center;
     }
     a:hover{
             background:rgba(0,0,0,0.5);
