--- a/index.html
+++ b/index.html
@@ -17,13 +17,22 @@
     }
     h1{
       border-bottom:1px solid green;
+      display:block;
+    }
+    .hide{
+          display:none;
     }</style>
+  div:hover hide{
+          display:block;
+  }
   </head><body>
 <h1 align="center">资源汇总网站</h1>
   <nav>
        <a>漫画</a>
        <a>软件</a>
-       <a></a>
+       <a>动漫</a>
+       <div><a>ACG萌/美化资源</a>
+         <div class="hide">萌娘资源站</div></div>
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
   </nav>
   <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio>
