--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     .hide{
           display:none;
     }</style>
-  div:hover hide{
+  div:hover .hide{
           display:block;
   }
   </head><body>
