--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       display:block;
     }
     .hide{
-          
+          display:inline-block;
     }</style>
   div:hover .hide{
           display:block;
