--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
     }
     .hide{
           display:inline-block;
+    }
+    #bgm{
+        border-radius:90px;
+        width:50px;
+        height:50px;
     }</style>
   div:hover .hide{
           display:block;
   }
   </head><body>
-<h1 align="center">资源汇总网站</h1>
+  <h1 align="center">资源汇总网站</h1><div id="bgm">bgm</div>
   <nav>
        <a>漫画</a>
        <a>软件</a>
