--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         border-radius:90px;
         width:50px;
         height:50px;
+        background:orange;
     }</style>
   div:hover .hide{
           display:block;
