--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     }
   a{
     display:inline-block;
-    width:100px;
+    width:50px;
     height:100px;
     background:rgb(225,115,115);
     align:center;
@@ -27,6 +27,8 @@
         width:50px;
         height:50px;
         background:orange;
+        position:fixed;
+        right:0;
     }</style>
   div:hover .hide{
           display:block;
@@ -40,6 +42,7 @@
        <div><a>ACG萌/美化资源</a>
          <div class="hide">萌娘资源站</div></div>
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
+    <a>关于初音的网站</a>初音社
   </nav>
   <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio>
 </body>
