--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         background:orange;
         position:fixed;
         right:0;
+        animation:bgm 5s infinite;
+    }
+    @keyframes bgm{
+      to{transform:rotate(360deg);}
     }</style>
   div:hover .hide{
           display:block;
