--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <div><a>ACG萌/美化资源</a>
          <div class="hide">萌娘资源站</div></div>
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
-    <a>关于初音的网站</a><a href="www.miku.club" target="_blank">初音社</a>
+    <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
   </nav>
   <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio>
 </body>
