--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
              background:green;
     }
   a{
-    display:inline-block;
+    display:
     width:50px;
     height:100px;
     background:rgb(225,115,115);
