--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         background:orange;
         position:fixed;
         right:0;
+        top:0;
         animation:bgm 5s infinite;
     }
     @keyframes bgm{
@@ -38,13 +39,13 @@
           display:block;
   }
   </head><body>
-  <h1 align="center">资源汇总网站</h1><div id="bgm">bgm</div>
+  <h1 align="center">资源汇总网站</h1><div id="bgm"><img src="https://goss1.vcg.com/creative/vcg/800/version23/VCG41482021043.jpg"/</div>
   <nav>
        <a>漫画</a>
        <a>软件</a>
        <a>动漫</a>
-       <div><a>ACG萌/美化资源</a>
-         <div class="hide">萌娘资源站</div></div>
+       <a>ACG萌/美化资源</a>
+         <div class="hide">萌娘资源站</div>
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
   </nav>
