--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           display:block;
   }
   </head><body>
-  <h1 align="center">资源汇总网站</h1><div id="bgm"><img src="https://goss1.vcg.com/creative/vcg/800/version23/VCG41482021043.jpg"/</div>
+  <h1 align="center">资源汇总网站</h1><img id="bgm" src="https://goss1.vcg.com/creative/vcg/800/version23/VCG41482021043.jpg"/>
   <nav>
        <a>漫画</a>
        <a>软件</a>
