--- a/index.html
+++ b/index.html
@@ -37,7 +37,72 @@
           display:block;
   }
   </head><body>
-  <h1 align="center">资源汇总网站</h1><img id="bgm" src="https://goss1.vcg.com/creative/vcg/800/version23/VCG41482021043.jpg"/>
+  <h1 align="center">资源汇总网站</h1><img id="bgm" src="    display:
+    width:50px;
+    height:100px;
+    background:rgb(225,115,115);
+    align:center;
+    }
+    a:hover{
+            background:rgba(0,0,0,0.5);
+    }
+    h1{
+      border-bottom:1px solid green;
+      display:block;
+    }
+    .hide{
+          display:inline-block;
+    }
+    #bgm{
+        border-radius:90px;
+       
+        position:fixed;
+        right:0;
+        top:0;
+        animation:bgm 5s infinite;
+    }
+    @keyframes bgm{
+      to{transform:rotate(360deg);}
+    }</style>
+  div:hover .hide{
+          display:block;
+  }
+  </head><body>
+  <h1 align="center">资源汇总网站</h1><img id="bgm" src="    display:
+    width:50px;
+    height:100px;
+    background:rgb(225,115,115);
+    align:center;
+    }
+    a:hover{
+            background:rgba(0,0,0,0.5);
+    }
+    h1{
+      border-bottom:1px solid green;
+      display:block;
+    }
+    .hide{
+          display:inline-block;
+    }
+    #bgm{
+        border-radius:90px;
+       
+        position:fixed;
+        right:0;
+        top:0;
+        animation:bgm 5s infinite;
+    }
+    @keyframes bgm{
+      to{transform:rotate(360deg);}
+    }</style>
+  div:hover .hide{
+          display:block;
+  }
+  </head><body>
+  <h1 align="center">资源汇总网站</h1>
+  <img id="bgm" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1511099183032&di=60e0d77b29812bf48fa869ec1648fcae&imgtype=jpg&src=http%3A%2F%2Fimg4.imgtn.bdimg.com%2Fit%2Fu%3D3778900539%2C3996182491%26fm%3D214%26gp%3D0.jpg"/>
+
+
   <nav>
        <a>漫画</a>
        <a>软件</a>
