--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
     #bgm{
         border-radius:90px;
-       
+        widyh:50px;
         position:fixed;
         right:0;
         top:0;
