--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
     #bgm{
         border-radius:90px;
-       
+        width:100px;
         position:fixed;
         right:0;
         top:0;
