--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     a:hover{
             background:rgba(0,0,0,0.5);
     }
+    /*标题属性*/
     h1{
       border-bottom:1px solid green;
       display:block;
