--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       border-bottom:1px solid green;
       display:block;
     }
+    /*导航栏二级菜单样式*/
     .hide{
           display:inline-block;
     }
+    /*右上角音乐播放按钮样式*/
     #bgm{
         border-radius:90px;
         width:100px;
@@ -44,6 +46,7 @@
   }
   </head><body>
   <h1 align="center">资源汇总网站</h1><!--标题居中-->
+  <!--右上角标题-->
   <img id="bgm" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1511099183032&di=60e0d77b29812bf48fa869ec1648fcae&imgtype=jpg&src=http%3A%2F%2Fimg4.imgtn.bdimg.com%2Fit%2Fu%3D3778900539%2C3996182491%26fm%3D214%26gp%3D0.jpg"/>
 
 
@@ -56,6 +59,6 @@
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
   </nav>
-  <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio>
+  <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
 </body>
 </html>
