--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
              background:green;
     }
   a{
-    display:
+    display:inline-block;
     width:50px;
-    height:100px;
+    height:60px;
     background:rgb(225,115,115);
     align:center;0
     width:50px;
