--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <a>软件</a>
        <a>动漫</a>
        <a>ACG萌/美化资源</a>
-         <div class="hide">萌娘资源站</div>
+         <a>萌娘资源站</a>
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
   </nav>
