--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         position:fixed;
         right:0;
         top:0;
+        cursor:pointer;
         animation:bgm 5s infinite;
     }
     /*右上角音乐播放按钮旋转动画*/
