--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
   div:hover .hide{
           display:block;
   }
+  
+  
+  
+  <script>
+           function bgm(){
+                          var bgm=document.getElementById("bgm")
+                          bgm.play()
+           }
+  </script>
   </head><body>
   <h1 align="center">资源汇总网站</h1><!--标题居中-->
   <!--右上角标题-->
