--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <style>nav{
              background:green;
     }
+    /*导航栏链接样式*/
   a{
     display:inline-block;
     width:50px;
@@ -46,13 +47,14 @@
   
   <script>
            function bgm(){
-                          var bgm=document.getElementById("bgm")
+                          var bgm=document.getElementById("backgroundmusic")
                           bgm.play()
            }
+    //点击右上角的按钮播放背景音乐
   </script>
   </head><body>
   <h1 align="center">资源汇总网站</h1><!--标题居中-->
-  <!--右上角标题-->
+  <!--右上角音乐播放按钮-->
   <img id="bgm" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1511099183032&di=60e0d77b29812bf48fa869ec1648fcae&imgtype=jpg&src=http%3A%2F%2Fimg4.imgtn.bdimg.com%2Fit%2Fu%3D3778900539%2C3996182491%26fm%3D214%26gp%3D0.jpg"/>
 
 
@@ -65,6 +67,6 @@
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
   </nav>
-  <audio src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
+  <audio id="backgroundmusic" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
 </body>
 </html>
