--- a/index.html
+++ b/index.html
@@ -39,12 +39,6 @@
     @keyframes bgm{
       to{transform:rotate(360deg);}
     }</style>
-  div:hover .hide{
-          display:block;
-  }
-  
-  
-  
   <script>
            function bgm(){
                           var bgm=document.getElementById("backgroundmusic")
@@ -67,6 +61,6 @@
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
   </nav>
-  <audio id="backgroundmusic" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
+  <audio id="backgroundmusic" onclick="bgm()" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
 </body>
 </html>
