--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
          <a>萌娘资源站</a>
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
+    <a href="https://github.com" target="_blank">github开源社区</a>
   </nav>
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
 </body>
