--- a/index.html
+++ b/index.html
@@ -65,5 +65,9 @@
     <a href="https://github.com" target="_blank">github开源社区</a>
   </nav>
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
+<div>播放列表
+<li>fallen star</li>
+<li>china-x</li>
+</div>
 </body>
 </html>
