--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
     <a href="https://github.com" target="_blank">github开源社区</a>
+<a href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
   </nav>
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
 <div>播放列表
