--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     /*右上角音乐播放按钮旋转动画*/
     @keyframes bgm{
       to{transform:rotate(360deg);}
-    }</style>
+    }
+  
+    span{
+        border:1px solid;
+    }
+  </style>
   <script>
            function bgm(){
                           var bgm=document.getElementById("backgroundmusic")
