--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   
     span{
         border:1px solid;
+        display:inline-block;
     }
   </style>
   <script>
@@ -184,7 +185,7 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")
   在线计算器
   <span>
     <span>1</span>
-    <span>1</span>
+    <span>2</span>
     <span>1</span>
     <span>1</span>
     <span>1</span>
