--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")
 </div>
   在线计算器
   <span>
-    <span>1</span> <span>2</span> <span>3</span>
+    <span class="inline">1</span> <span class="inline">2</span> <span class="inline">3</span>
     
-    <span>4</span> <span>5</span> <span>6</span>
+    <span class="inline">4</span> <span class="inline">5</span> <span class="inline">6</span>
     
-    <span>7</span> <span>8</span> <span>9</span>
+    <span class="inline">7</span> <span class="inline">8</span> <span class="inline">9</span>
    
-    <span>0</span> <span>1</span> <span>1</span>
+    <span class="inline">0</span> <span class="inline">1</span> <span class="inline">1</span>
   </span>
 </body>
 </html>
