--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
   
     span{
         border:1px solid;
+    }
+    .inline{
         display:inline-block;
     }
   </style>
@@ -190,7 +192,7 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")
     
     <span class="inline">7</span> <span class="inline">8</span> <span class="inline">9</span>
    
-    <span class="inline">0</span> <span class="inline">1</span> <span class="inline">1</span>
+    <span class="inline">0</span> <span class="inline">+</span> <span class="inline">-</span>
   </span>
 </body>
 </html>
