--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")
 </div>
   在线计算器
   <span>
-    <span class="inline">1</span> <span class="inline">2</span> <span class="inline">3</span>
+    <span class="inline">1</span> <span class="inline">2</span> <span class="inline">3</span><br/>
     
-    <span class="inline">4</span> <span class="inline">5</span> <span class="inline">6</span>
+    <span class="inline">4</span> <span class="inline">5</span> <span class="inline">6</span><br/>
     
-    <span class="inline">7</span> <span class="inline">8</span> <span class="inline">9</span>
+    <span class="inline">7</span> <span class="inline">8</span> <span class="inline">9</span><br/>
    
-    <span class="inline">0</span> <span class="inline">+</span> <span class="inline">-</span>
+    <span class="inline">0</span> <span class="inline">+</span> <span class="inline">-</span><br/>
   </span>
 </body>
 </html>
