--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     }
     .inline{
         display:inline-block;
+        background:orange;
     }
   </style>
   <script>
@@ -60,9 +61,8 @@
   
   
   <!--在线人数代码-->
+  <!--
   <script>
-
-<!--
 
 var caution = false
 
@@ -156,9 +156,8 @@ visits = parseInt(visits) + 1
 
 setCookie("counter", visits, now)
 
-document.write("欢迎光临本站，您是第" + visits + "访问者！")
-
-// -->
+document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
+<!-------------------------暂时禁用↑----------------------------->
 
 </script>
   </head><body>
