添加了萌娘资源站的网址
添加了萌娘资源站的网址

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
        <a>软件</a>
        <a>动漫</a>
        <a>ACG萌/美化资源</a>
-         <a>萌娘资源站</a>
+         <a href="http://moe.005.tv/" traget="_blank">萌娘资源站</a>
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
     <a href="https://github.com" target="_blank">github开源社区</a>
