--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         display:inline-block;
         background:orange;
     }
+    .backgroundmusic{
+        position:fixed;
+        top:0;
+    }
   </style>
   <script>
            function bgm(){
@@ -157,7 +161,7 @@ visits = parseInt(visits) + 1
 setCookie("counter", visits, now)
 
 document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
-<!-------------------------暂时禁用↑----------------------------->
+<!--------------------——————暂时禁用↑----------------------------->
 
 </script>
   </head><body>
@@ -172,7 +176,7 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
        <a>软件</a>
        <a>动漫</a>
        <a>ACG萌/美化资源</a>
-         <a href="http://moe.005.tv/" traget="_blank">萌娘资源站</a>
+         <a href="http://moe.005.tv/" target="_blank">萌娘资源站</a>
        <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
     <a href="https://github.com" target="_blank">github开源社区</a>
