--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
    
     <span class="inline">0</span> <span class="inline">+</span> <span class="inline">-</span><br/>
   </span>
-    <img src="https://github.com/2439905184/2439905184.github.io/blob/master/bilibili时间机器.png" alt="图片引入测试"/>
+    <img src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
+    <>
 </body>
 </html>
