--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
         display:inline-block;
         background:orange;
     }
-    .backgroundmusic{
+    audio{
         position:fixed;
         top:0;
+        display:block;
     }
   </style>
   <script>
