--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         top:0;
         display:block;
     }
+    img{
+        float:right;
+        width:100px;
+        height:500px;
+    }
   </style>
   <script>
            function bgm(){
