--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
         top:0;
         display:block;
     }
-    img{
+    #test{
         float:right;
-        width:100px;
-        height:500px;
+        width:500px;;
     }
   </style>
   <script>
@@ -203,7 +202,7 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
    
     <span class="inline">0</span> <span class="inline">+</span> <span class="inline">-</span><br/>
   </span>
-    <img src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
+    <img id="test" src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
     <>
 </body>
 </html>
