--- a/index.html
+++ b/index.html
@@ -203,6 +203,6 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
     <span class="inline">0</span> <span class="inline">+</span> <span class="inline">-</span><br/>
   </span>
     <img id="test" src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
-    <>
+    <strong><font color="rgb(48, 128, 232)">此网页中如有链接失效也是可能的事 因为这些都是从网上收集来的</font></strong>
 </body>
 </html>
