修改显示屏
修改显示屏

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         display:inline-block;
         background:orange;
     }
+    .inline:hover{
+        background:rgba(0,0,0,0.5);
+    }
     audio{
         position:fixed;
         top:0;
@@ -192,7 +195,9 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
 <li>fallen star</li>
 <li>china-x</li>
 </div>
-  在线计算器
+  在线计算器<br/>
+    <!--在线计算器显示屏-->
+    <div style="height:50px;"></div>
   <span>
     <span class="inline">1</span> <span class="inline">2</span> <span class="inline">3</span><br/>
     
