--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
 </div>
   在线计算器<br/>
     <!--在线计算器显示屏-->
-    <div style="height:50px;border:1px solid;">sda</div>
+    <div style="height:50px;border:1px solid;height:100px;">sda</div>
   <span>
     <span class="inline">1</span> <span class="inline">2</span> <span class="inline">3</span><br/>
     
