--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
     <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
     <a href="https://github.com" target="_blank">github开源社区</a>
 <a href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
+    <a>实用工具</a>
+    <a href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
   </nav>
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
 <div>播放列表
