--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     }
   </style>
   <script>
+    var vol=document.getElementById("backgroundmusic")
+    vol.
            function bgm(){
                           var bgm=document.getElementById("backgroundmusic")
                           bgm.play()
@@ -192,7 +194,7 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
     <a>实用工具</a>
     <a href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
   </nav>
-  <audio id="backgroundmusic" autoplay="autoplay" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
+  <audio id="backgroundmusic" autoplay="autoplay" volume="0.3" src="http://link.hhtjim.com/163/29737987.mp3" controls="controls"></audio><!--背景音乐-->
 <div>播放列表
 <li>fallen star</li>
 <li>china-x</li>
