--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </style>
   <script>
     var vol=document.getElementById("backgroundmusic")
-    vol.
+    vol.volume=0.3
            function bgm(){
                           var bgm=document.getElementById("backgroundmusic")
                           bgm.play()
