添加了赛风
赛风

--- a/index.html
+++ b/index.html
@@ -193,10 +193,11 @@ document.write("欢迎光临本站，您是第" + visits + "访问者！")-->
 <a href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
     <a>实用工具</a>
     <a href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
+    <a herf="" target="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html">vpn</a>
   </nav>
   <audio id="backgroundmusic" autoplay="autoplay" volume="0.3" src="http://m10.music.126.net/20171125124639/b06f6c3b2dcbc70fd28d931029bca695/ymusic/592b/5b33/d1aa/14d38c477bacda3896b959621ad34708.mp3?&bitrate=128000" controls="controls"></audio><!--背景音乐-->
 <div>播放列表
-<li>fallen star</li>b
+<li>fallen star</li>
 <li>china-x</li>
 </div>
   在线计算器<br/>
