--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     }
     a:hover{
             background:rgba(0,0,0,0.5);
-            animation:transform 4s ;
+            webkit-animation:transform 4s ;
     }
-    @keyframes transform{
-      from{}
+    @-webkit-keyframes transform{
+      to{transform:rotate(45deg;}
     }
     /*标题属性*/
     h1{
