--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     }
     a:hover{
             background:rgba(0,0,0,0.5);
-            animation:transform 4s ;
+            animation:t 4s ;
     }
-    @keyframes transform{
+    @keyframes t{
       to{transform:rotate(45deg）;}
     }
     /*标题属性*/
