--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1511099183032&di=60e0d77b29812bf48fa869ec1648fcae&imgtype=jpg&src=http%3A%2F%2Fimg4.imgtn.bdimg.com%2Fit%2Fu%3D3778900539%2C3996182491%26fm%3D214%26gp%3D0.jpg"/><!--网页缩略图-->
-  <link rel="stylesheet" href="https://github.com/2439905184/2439905184.github.io/master/123.css" type="css/text"/>
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/index.css" type="css/text"/>
   <style>nav{
              background:green;
     }
