--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         border-radius:90px;
         width:100px;
         position:fixed;
-        right:0;
-        top:0;
+        right:0px;
+        top:0px;
         cursor:pointer;
         animation:bgm 5s infinite;
     }
