--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             animation:t 4s ;
     }
     @keyframes t{
-      to{transform:rotate(45deg）;}
+      
+      to{transform:rotate(45deg);}
     }
     /*标题属性*/
     h1{
@@ -66,14 +67,6 @@
         width:500px;
     }
   </style>
-  <script>
-    var vol=document.getElementById("backgroundmusic")
-    vol.volume=0.3
-           function bgm(){
-                          var bgm=document.getElementById("backgroundmusic")
-                          bgm.play()
-           }
-  </script>
   
   
  
