--- a/index.html
+++ b/index.html
@@ -111,5 +111,6 @@
   </span>
     <img id="test" src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
     <strong><font color="rgb(48, 128, 232)">此网页中如有链接失效也是可能的事 因为这些都是从网上收集来的</font></strong>
+  <font style="float:right;">-made by 电音爱好者1288hh</font>
 </body>
 </html>
