--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <h1 align="center">资源汇总网站</h1><!--标题居中-->
   <a href="http://easypage.com/0N0K0R0C0T5W7F2H/fqukf" target="_blank" style="display:inline;">旧网站入口</a><!--在easypage上的旧网页链接-->
   友情链接<a href="https://easypage.com/0N0K0R0C0T5W7F2H/tjepr4" target="_blank">ACG壁纸小站</a>
+  <font color="red"> 温馨提示：</font>要获得更好的网页体验，请使用Chorme内核的浏览器！ 此网页在设计时未考虑到IE浏览器和欧朋浏览器！
   <!--右上角音乐播放按钮-->
   <img id="bgm" onclick="bgm()" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1511099183032&di=60e0d77b29812bf48fa869ec1648fcae&imgtype=jpg&src=http%3A%2F%2Fimg4.imgtn.bdimg.com%2Fit%2Fu%3D3778900539%2C3996182491%26fm%3D214%26gp%3D0.jpg"/>
 
