--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
     @keyframes t{
       
-      to{transform:rotate(45deg);}
+      to{transform:rotate(45deg);transform:rotateY(90deg);}
     }
     /*标题属性*/
     h1{
