--- a/index.html
+++ b/index.html
@@ -114,5 +114,15 @@
     <img id="test" src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
     <strong><font color="rgb(48, 128, 232)">此网页中如有链接失效也是可能的事 因为这些都是从网上收集来的</font></strong>
   <font style="float:right;">-made by 电音爱好者1288hh</font>
-</body>
+  <div id="list">播放列表</div><!--这是侧边播放列表栏-->
+  <style>
+    #list{
+      width:50px;
+      height:100px;
+      background:black;
+      color:white;
+    }
+  </style>
+  </body>
+  
 </html>
