--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
     #list{
       width:50px;
       height:100px;
+      position:fixed;
+      left:0;
       background:black;
       color:white;
+      cursor:pointer;
     }
   </style>
   </body>
