--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       height:100px;
       position:fixed;
       left:0;
-      background:black;
+      background:orange;
       color:white;
       cursor:pointer;
     }
