修改列表样式

--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
   <div id="list">播放列表</div><!--这是侧边播放列表栏-->
   <style>
     #list{
-      width:50px;
-      height:100px;
+      width:30px;
+      height:50px;
       position:fixed;
       left:0;
+      top:auto;
       background:orange;
       color:white;
       cursor:pointer;
