--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
  
   </head><body>
   <h1 align="center">资源汇总网站</h1><!--标题居中-->
+  <img src="https://easypage.com/asset/front/img/ico/favicon.png"/>
   <a href="http://easypage.com/0N0K0R0C0T5W7F2H/fqukf" target="_blank" style="display:inline;">旧网站入口</a><!--在easypage上的旧网页链接-->
   友情链接<a href="https://easypage.com/0N0K0R0C0T5W7F2H/tjepr4" target="_blank">ACG壁纸小站</a>
   <font color="red"> 温馨提示：</font>要获得更好的网页体验，请使用Chorme内核的浏览器！ 此网页在设计时未考虑到IE浏览器和欧朋浏览器！
