--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 <li>fallen star</li>
 <li>china-x</li>
 </div>
-  在线计算器<br>
+  <font style="float:right;">在线计算器</font><br>
     <!--在线计算器显示屏-->
-    <div style="height:50px;border:1px solid;height:100px;">sda</div>
+    <div style="height:50px;border:1px solid;width:100px;float:right;">sda</div>
   <span>
     <span class="inline">1</span> <span class="inline">2</span> <span class="inline">3</span><br/>
     
