--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
              background:orange;
     }
     /*导航栏链接样式*/
-  a{
+  .mainlink{
     display:inline-block;
     width:50px;
     height:60px;
@@ -81,18 +81,18 @@
 
 
   <nav>
-       <a>漫画</a>
-       <a>软件</a>
-       <a>动漫</a>
-       <a>ACG萌/美化资源</a>
-         <a href="http://moe.005.tv/" target="_blank">萌娘资源站</a>
-       <a href="http://www.midishow.com" target="_blank">midi资源网站</a>
-    <a>关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
-    <a href="https://github.com" target="_blank">github开源社区</a>
-<a href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
-    <a>实用工具</a>
-    <a href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
-    <a href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
+       <a class="mainlink">漫画</a>
+       <a class="mainlink">软件</a>
+       <a class="mainlink">动漫</a>
+       <a class="mainlink">ACG萌/美化资源</a>
+         <a class="mainlink" href="http://moe.005.tv/" target="_blank">萌娘资源站</a>
+       <a class="mainlink" href="http://www.midishow.com" target="_blank">midi资源网站</a>
+    <a class="mainlink">关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
+    <a class="mainlink" href="https://github.com" target="_blank">github开源社区</a>
+<a class="" href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
+    <a class="mainlink">实用工具</a>
+    <a class="mainlink" href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
+    <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
   </nav>
   <audio id="backgroundmusic" autoplay="autoplay" volume="0.3"
          src="https://github.com/2439905184/2439905184.github.io/raw/master/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
@@ -112,7 +112,7 @@
    
     <span class="inline">0</span> <span class="inline">+</span> <span class="inline">-</span><br/>
   </span>
-    <a style="display:inline;" href="http://www.bilibili.com" target="_blank"><img id="test" src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
+    <a href="http://www.bilibili.com" target="_blank"><img id="test" src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
   </a>
       <strong><font color="rgb(48, 128, 232)">此网页中如有链接失效也是可能的事 因为这些都是从网上收集来的</font></strong>
   <font style="float:right;">-made by 电音爱好者1288hh</font>
