--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
   </nav>
   <audio id="backgroundmusic" autoplay="autoplay" volume="0.3"
          src="https://github.com/2439905184/2439905184.github.io/raw/master/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
-<div>播放列表
+<div style="background:pink;">播放列表
 <li>fallen star</li>
 <li>china-x</li>
+  <li>seve</li>
 </div>
   <font style="float:right;">在线计算器</font><br>
     <!--在线计算器显示屏-->
@@ -115,7 +116,7 @@
     <a href="http://www.bilibili.com" target="_blank"><img id="test" src="https://raw.githubusercontent.com/2439905184/2439905184.github.io/master/bilibili%E6%97%B6%E9%97%B4%E6%9C%BA%E5%99%A8.png" alt="图片引入测试"/>
   </a>
       <strong><font color="rgb(48, 128, 232)">此网页中如有链接失效也是可能的事 因为这些都是从网上收集来的</font></strong>
-  <font style="float:right;">-made by 电音爱好者1288hh</font>
+  <font style="float:right;">-made by <a href="https://space.bilibili.com/26680057/#!/index" target="blank">电音爱好者1288hh</a></font>
   <div id="list">播放列表</div><!--这是侧边播放列表栏-->
   <style>
     #list{
