--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     background:rgb(225,115,115);
     align:center;
     }
-    a:hover{
+   .mainlink:hover{
             background:rgba(0,0,0,0.5);
             animation:t 2s ;
     }
@@ -66,15 +66,21 @@
         float:right;
         width:500px;
     }
+    .new:hover{
+        animation:t 2s;
+    }
   </style>
   
   
  
   </head><body>
   <h1 align="center">资源汇总网站</h1><!--标题居中-->
-  <img src="https://easypage.com/asset/front/img/ico/favicon.png"/>
-  <a href="http://easypage.com/0N0K0R0C0T5W7F2H/fqukf" target="_blank" style="display:inline;">旧网站入口</a><!--在easypage上的旧网页链接-->
-  友情链接<a href="https://easypage.com/0N0K0R0C0T5W7F2H/tjepr4" target="_blank">ACG壁纸小站</a>
+ 
+  旧网站入口
+  <!--在easypage上的旧网页链接--><a class="new" href="http://easypage.com/0N0K0R0C0T5W7F2H/fqukf" target="_blank" style="display:inline;"><img src="https://easypage.com/asset/front/img/ico/favicon.png"/>
+  </a><!--easypage图标链接-->
+  友情链接
+  <a class="mainlink" href="https://easypage.com/0N0K0R0C0T5W7F2H/tjepr4" target="_blank">ACG壁纸小站</a>
   <font color="red"> 温馨提示：</font>要获得更好的网页体验，请使用Chorme内核的浏览器！ 此网页在设计时未考虑到IE浏览器和欧朋浏览器！
   <!--右上角音乐播放按钮-->
   <img id="bgm" onclick="bgm()" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1511099183032&di=60e0d77b29812bf48fa869ec1648fcae&imgtype=jpg&src=http%3A%2F%2Fimg4.imgtn.bdimg.com%2Fit%2Fu%3D3778900539%2C3996182491%26fm%3D214%26gp%3D0.jpg"/>
@@ -89,7 +95,7 @@
        <a class="mainlink" href="http://www.midishow.com" target="_blank">midi资源网站</a>
     <a class="mainlink">关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
     <a class="mainlink" href="https://github.com" target="_blank">github开源社区</a>
-<a class="" href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
+<a class="mainlink" href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
     <a class="mainlink">实用工具</a>
     <a class="mainlink" href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
