--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </a>
   
   1288hh的教程小站
-  <a><img src="https://easypage.com/users/0N0K0R0C0T5W7F2H/g0rtr4/2017032658d7624f274e7_500X500.png"/></a>
+  <a href="https://easypage.com/0N0K0R0C0T5W7F2H/g0rtr4" target="_blank"><img src="https://easypage.com/users/0N0K0R0C0T5W7F2H/g0rtr4/2017032658d7624f274e7_500X500.png"/></a>
   
   <strong><font color="rgb(48, 128, 232)">此网页中如有链接失效也是可能的事 因为这些都是从网上收集来的</font></strong>
   <font style="float:right;">-made by <a href="https://space.bilibili.com/26680057/#!/index" target="blank">电音爱好者1288hh</a></font>
