--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     .inline{
         display:inline-block;
         background:orange;
+        cursor:pointer;
+        float:right;
     }
     .inline:hover{
         background:rgba(0,0,0,0.5);
