--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     .new:hover{
         animation:t 2s;
     }
+    ol li{
+      cursor:pointer;
+    }
+    li:hover{text-decotation}
   </style>
   
   
