--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     }
     @keyframes t{
       
-      to{transform:rotate(45deg);transform:rotateY(90deg);}
+      50%{
+        transform:rotate(45deg);
+        ;}
+      100%{transform:rotate(90deg);}
     }
     /*标题属性*/
     h1{
