--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     }
    .mainlink:hover{
             background:rgba(0,0,0,0.5);
-            animation:t 2s ;
+            animation:t 2s;
+            animation-fill-mode:forwards;
     }
     @keyframes t{
       
-      50%{
+      20%{
         transform:rotate(45deg);
-        ;}
-      100%{transform:rotate(90deg);}
+      }
+      75%{transform:rotateY(180deg);}
     }
     /*标题属性*/
     h1{
