--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
        <a class="mainlink">ACG萌/美化资源</a>
          <a class="mainlink" href="http://moe.005.tv/" target="_blank">萌娘资源站</a>
        <a class="mainlink" href="http://www.midishow.com" target="_blank">midi资源网站</a>
-    <a class="mainlink">关于初音的网站</a><a href="http://www.miku.club" target="_blank">初音社</a>
+    <a class="mainlink">关于初音的网站</a><a class="mainlink" href="http://www.miku.club" target="_blank">初音社</a>
     <a class="mainlink" href="https://github.com" target="_blank">github开源社区</a>
 <a class="mainlink" href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
     <a class="mainlink">实用工具</a>
