--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
   </nav>
   <audio id="backgroundmusic" autoplay="autoplay" volume="0.3"
-         src="https://github.com/2439905184/2439905184.github.io/raw/master/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
+         src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
 <div style="background:pink;">播放列表
   <ol>
 <li>fallen star</li>
