--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
          src="/music/elochka.mp3" controls="controls" onerror="error()"<audio><!--背景音乐-->
   <script>function error(){
                    var error=getElementById("backgroundmusic")
-                   error.style.display=none
-    }</script>
+                   error.style.display=none}
+    </script>
 <div style="background:pink;">播放列表
   <ol>
 <li>fallen star</li>
