--- a/index.html
+++ b/index.html
@@ -113,11 +113,7 @@
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
   </nav>
   <audio id="backgroundmusic" autoplay="autoplay" volume="0.3"
-         src="/music/elochka.mp3" controls="controls" onerror="error()"><audio><!--背景音乐-->
-  <script>function error(){
-                   var error=getElementById("backgroundmusic")
-                   error.style.display=none}
-    </script>
+         src="/music/elochka.mp3" controls="controls"><audio><!--背景音乐-->
 <div style="background:pink;">播放列表
   <ol>
 <li>fallen star</li>
