--- a/index.html
+++ b/index.html
@@ -60,16 +60,11 @@
         display:inline-block;
         background:orange;
         cursor:pointer;
-        float:right;
     }
     .inline:hover{
         background:rgba(0,0,0,0.5);
     }
-    audio{
-        position:fixed;
-        top:0;
-        display:block;
-    }
+
     #test{
         float:right;
         width:500px;
@@ -80,7 +75,7 @@
     ol li{
       cursor:pointer;
     }
-    li:hover{text-decotation}
+    li:hover{text-decotation:underline;}
   </style>
   
   
