--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </nav>
   <audio id="backgroundmusic" autoplay="autoplay" volume="0.3"
          src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
-<div style="background:pink;">播放列表
+<div style="background:pink;width:500px;">播放列表
   <ol>
 <li>fallen star</li>
 <li>china-x</li>
