--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
          src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
 <div style="background:pink;width:500px;">播放列表
   <ol>
-<li>fallen star</li>
-<li>china-x</li>
-  <li>seve</li>
-    <li>River-Axero</li>
+<li id="fallen star">fallen star</li>
+<li id="China-x">China-x</li>
+<li id="Seve">Seve</li> 
+<li id="River">River-Axero</li>
   </ol>
     </div>
   <font style="float:right;">在线计算器</font><br>
