--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><!--[if IE]><p>The website can't work in IE,please change it to chorme</p><![end if]-->
+﻿<!doctype html><!--[if IE]><p>The website can't work in IE,please change it to chorme</p><![end if]-->
 <html>
 <head>
   <meta charset="utf-8">
@@ -113,7 +113,7 @@
   <ol>
 <li id="fallen star">fallen star</li>
 <li id="China-x">China-x</li>
-<li id="Seve">Seve</li> 
+<li id="Seve" onclick="Seve()">Seve</li> 
 <li id="River">River-Axero</li>
   </ol>
     </div>
