--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <ol>
 <li id="fallen star">fallen star</li>
 <li id="China-x">China-x</li>
-<li id="Seve" onclick="Seve()">Seve</li> 
+<li id="Seve" onclick="seve()">Seve</li> 
 <li id="River">River-Axero</li>
   </ol>
     </div>
