--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html><!--[if IE]><p>The website can't work in IE,please change it to chorme</p><![end if]-->
+﻿<!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
