--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="/css/test.css"/>
   <script src="/js/test.js"></script>
   <title>1288hh的个人小站</title>
+  <script>function seve(){
+      var seve=document.getElementById("backgroundmusic")
+      seve.src=/music/Time.mp3
+      seve.play()}</sscript>
   <style>nav{
              background:orange;
     }
