--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script>function seve(){
       var seve=document.getElementById("backgroundmusic")
       seve.src=/music/Time.mp3
-      seve.play()}</sscript>
+      seve.play()}</script>
   <style>nav{
              background:orange;
     }
