--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -7,9 +7,9 @@
   <script src="/js/test.js"></script>
   <title>1288hh的个人小站</title>
   <script>function seve(){
-      var seve=document.getElementById("backgroundmusic")
-      seve.src=/music/Time.mp3
-      seve.play()}</script>
+      var seve=document.getElementById("backgroundmusic");
+      seve.src=/music/Time.mp3;
+      seve.play();}</script>
   <style>nav{
              background:orange;
     }
