--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <script src="/js/test.js"></script>
   <title>1288hh的个人小站</title>
   <script>function seve(){
-      var seve=document.getElementById("backgroundmusic");
-      seve.src=/music/Time.mp3;
-      seve.play();}</script>
+      s=document.getElementById("backgroundmusic");
+      s.src=/music/Time.mp3;
+      s.play();}</script>
   <style>nav{
              background:orange;
     }
