--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <a class="mainlink" href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
   </nav>
-  <audio id="backgroundmusic" autoplay="autoplay" volume="0.3"
+  <audio id="backgroundmusic" volume="0.3"
          src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
 <div style="background:pink;width:500px;">播放列表
   <ol>
@@ -158,5 +158,6 @@
           preload="auto" controls="controls"></vedio>
   <font style="cursor:pointer;">点击召唤吉祥物（测试中）</font>
   </body>
+  <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=1&id=35289468&auto=1&height=90"></iframe>
   
 </html>
