--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
   <div id="saolei"></div>
   <style>#saolei{
     height:800px;
-    widhth:480px;
+    widhth:200px;
     }</style>
   <!--我的世界-->
-  <div>相关网站
+  <div>相关网站</div>
   <a></a>
   <iframe width="330" height="110" src="//music.163.com/outchain/player?"></iframe>
   <embed src="//music.163.com/style/swf/widget.swf?sid=35289468&type=1&auto=0&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed>
