--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   <div id="saolei"></div>
   <style>#saolei{
     height:800px;
-    widhth:200px;
+    width:480px;
     }</style>
   <!--我的世界-->
   <div>相关网站</div>
