--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     }</style>
   <!--我的世界-->
   <div>相关网站</div>
-  <a></a>
+  <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
   <iframe width="330" height="110" src="//music.163.com/outchain/player?"></iframe>
   <embed src="//music.163.com/style/swf/widget.swf?sid=35289468&type=1&auto=0&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed>
   <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=1&id=35289468&auto=1&height=430"></iframe>
