--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 <a class="mainlink" href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
     <a class="mainlink">实用工具</a>
     <a class="mainlink" href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
+    <!--动漫类-->
+    <a class="mainlink" href="http://key.visualarts.gr.jp/angelbeats/index.html" target="_blank">key社 Angel Beats 官方网站</a>
+    <a class="mainlink" href="http://www.haruhi.tv/" target="_blank">SOS团 凉宫春日的忧伤官方网站</a>
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
   </nav>
   <audio id="backgroundmusic" volume="0.3"
@@ -164,6 +167,7 @@
   <!--我的世界-->
   <div>我的世界相关网站</div>
   <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
+  <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a>
   <iframe width="330" height="110" src="//music.163.com/outchain/player?"></iframe>
   <embed src="//music.163.com/style/swf/widget.swf?sid=35289468&type=1&auto=0&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed>
   <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=1&id=35289468&auto=1&height=430"></iframe>
