修改了标题
修改了标题

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   
  
   </head><body>
-  <h1 align="center">资源汇总网站</h1><!--标题居中-->
+  <h1 align="center">1288hh的个人小站</h1><!--标题居中-->
  
   旧网站入口
   <!--在easypage上的旧网页链接--><a class="new" href="http://easypage.com/0N0K0R0C0T5W7F2H/fqukf" target="_blank" style="display:inline;"><img src="https://easypage.com/asset/front/img/ico/favicon.png"/>
