--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
   </a><!--easypage图标链接-->
   友情链接
   <a class="mainlink" href="https://easypage.com/0N0K0R0C0T5W7F2H/tjepr4" target="_blank">ACG壁纸小站</a>
+  <a> href="http://lightmoon.pw/#/Blog/BlogList" target="_blank">JE谱曲资源站</a>
   <font color="red"> 温馨提示：</font>要获得更好的网页体验，请使用Chorme内核的浏览器！ 此网页在设计时未考虑到IE浏览器和欧朋浏览器！
   <!--右上角音乐播放按钮-->
   <img id="bgm" onclick="bgm()" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1511099183032&di=60e0d77b29812bf48fa869ec1648fcae&imgtype=jpg&src=http%3A%2F%2Fimg4.imgtn.bdimg.com%2Fit%2Fu%3D3778900539%2C3996182491%26fm%3D214%26gp%3D0.jpg"/>
@@ -112,6 +113,8 @@
     <a class="mainlink" href="http://key.visualarts.gr.jp/angelbeats/index.html" target="_blank">key社 Angel Beats 官方网站</a>
     <a class="mainlink" href="http://www.haruhi.tv/" target="_blank">SOS团 凉宫春日的忧伤官方网站</a>
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
+    <!--游戏类-->
+    <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
   </nav>
   <audio id="backgroundmusic" volume="0.3"
          src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
@@ -168,6 +171,10 @@
   <div>我的世界相关网站</div>
   <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
   <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a>
+  <duv>好番推荐</div>
+  <a href="" tagret="_blank">变态王子与不笑猫</a>
+  <a>某科学的超电磁炮</a>
+  <a>学园孤岛<a>
   <iframe width="330" height="110" src="//music.163.com/outchain/player?"></iframe>
   <embed src="//music.163.com/style/swf/widget.swf?sid=35289468&type=1&auto=0&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed>
   <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=1&id=35289468&auto=1&height=430"></iframe>
