--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
+    <a href="http://www.xuekouqin.com/rumen/fuyin/202.html" target="_blank">口琴手振音走法</a>
   </nav>
   <audio id="backgroundmusic" volume="0.3"
          src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
