--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     </br>
     <a class="mainlink" href="http://www.xuekouqin.com/" target="_blank">学口琴音乐网</a>
     <a href="http://www.xuekouqin.com/rumen/fuyin/202.html" target="_blank">口琴手振音走法</a>
+    <a href="https://www.zhaogepu.com/jianpu/120730.html" target="_blank">团子大家族简谱</a>
   </nav>
   <audio id="backgroundmusic" volume="0.3"
          src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
