--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
   <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
   <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a>
   <duv>好番推荐</div>
-  <a href="" tagret="_blank">变态王子与不笑猫</a>
-  <a>某科学的超电磁炮</a>
-  <a>学园孤岛<a>
+  <a href="http://bangumi.bilibili.com/anime/413" tagret="_blank">变态王子与不笑猫</a>
+  <a href="http://bangumi.bilibili.com/anime/425" target="_blank">某科学的超电磁炮</a>
+  <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">学园孤岛<a>
   <iframe width="330" height="110" src="//music.163.com/outchain/player?"></iframe>
   <embed src="//music.163.com/style/swf/widget.swf?sid=35289468&type=1&auto=0&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed>
   <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=1&id=35289468&auto=1&height=430"></iframe>
