--- a/index.html
+++ b/index.html
@@ -177,10 +177,14 @@
   <div>我的世界相关网站</div>
   <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
   <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a>
-  <duv>好番推荐</div>
+  <div>好番推荐</div>
   <a href="http://bangumi.bilibili.com/anime/413" tagret="_blank">变态王子与不笑猫</a>
   <a href="http://bangumi.bilibili.com/anime/425" target="_blank">某科学的超电磁炮</a>
   <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">学园孤岛<a>
+    <br/>搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">在下坂本，有何贵干</a>
+    <a href="http://bangumi.bilibili.com/anime/980" target="_blank">MM一族</a>
+    <div>电音推荐</div>
+    Rubik China-X China-O China-PiPa 13 months
   <iframe width="330" height="110" src="//music.163.com/outchain/player?"></iframe>
   <embed src="//music.163.com/style/swf/widget.swf?sid=35289468&type=1&auto=0&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed>
   <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=1&id=35289468&auto=1&height=430"></iframe>
