--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <a class="mainlink">实用工具</a>
     <a class="mainlink" href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
     <!--动漫类-->
-    <a class="mianlink" href="http://www.moe123.net/" target="_blank">萌导航</a>
+    <a class="mianlink" href="http://www.moe123.net/" target="_blank">萌导航,你的二次元导航姬</a>
     <a class="mainlink" href="http://key.visualarts.gr.jp/angelbeats/index.html" target="_blank">key社 Angel Beats 官方网站</a>
     <a class="mainlink" href="http://www.haruhi.tv/" target="_blank">SOS团 凉宫春日的忧伤官方网站</a>
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
@@ -121,7 +121,7 @@
     <a href="http://www.xuekouqin.com/rumen/fuyin/202.html" target="_blank">口琴手振音走法</a>
     <a href="https://www.zhaogepu.com/" target="_blank">找歌谱网</a>
     <a href="https://www.zhaogepu.com/jianpu/120730.html" target="_blank">团子大家族简谱</a>
-  <a class="mainlink" href="www.moe123.net" target="_blank">萌导航，你的二次元导航姬</a>
+  
   </nav>
   <audio id="backgroundmusic" volume="0.3"
          src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
