--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <a class="mainlink">实用工具</a>
     <a class="mainlink" href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
     <!--动漫类-->
-    <a class="mainlink" href="http://www.moe123.net/" target="_blank">萌导航,你的二次元导航姬</a>
+    <a href="http://www.moe123.net/" target="_blank"><img src="http://www.moe123.net/favicon.ico"/>萌导航,你的二次元导航姬</a>
     <a class="mainlink" href="http://key.visualarts.gr.jp/angelbeats/index.html" target="_blank">key社 Angel Beats 官方网站</a>
     <a class="mainlink" href="http://www.haruhi.tv/" target="_blank">SOS团 凉宫春日的忧伤官方网站</a>
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
