--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!--动漫类-->
     <a href="http://www.moe123.net/" target="_blank"><img src="http://www.moe123.net/favicon.ico"/>萌导航,你的二次元导航姬</a>
     <a class="mainlink" href="http://key.visualarts.gr.jp/angelbeats/index.html" target="_blank">key社 Angel Beats 官方网站</a>
-    <a class="mainlink" href="http://www.haruhi.tv/" target="_blank">SOS团 凉宫春日的忧伤官方网站</a>
+    <a class="mainlink" href="http://www.haruhi.tv/" target="_blank"><img src="http://www.haruhi.tv/img/zozlogo.jpg"/>SOS团 凉宫春日的忧伤官方网站</a>
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
