--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
     <a href="http://www.xuekouqin.com/rumen/fuyin/202.html" target="_blank">口琴手振音走法</a>
     <a href="https://www.zhaogepu.com/" target="_blank">找歌谱网</a>
     <a href="https://www.zhaogepu.com/jianpu/120730.html" target="_blank">团子大家族简谱</a>
+  <!--ACG社交类-->
+  <a class="mainlink" target="_blank">蔷薇花园聊天室</a>
+  <a class="mainlink" target="_blank">JPbeta多元化日本文化资讯站</a>
   
   </nav>
   <audio id="backgroundmusic" volume="0.3"
