--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     <a href="https://www.zhaogepu.com/" target="_blank">找歌谱网</a>
     <a href="https://www.zhaogepu.com/jianpu/120730.html" target="_blank">团子大家族简谱</a>
   <!--ACG社交类-->
-  <a class="mainlink" target="_blank">蔷薇花园聊天室</a>
-  <a class="mainlink" target="_blank">JPbeta多元化日本文化资讯站</a>
+  <a class="mainlink" href="http://iirose.com/" target="_blank">蔷薇花园聊天室</a>
+  <a class="mainlink" href="http://www.jpbeta.net/" target="_blank">JPbeta多元化日本文化资讯站</a>
   
   </nav>
   <audio id="backgroundmusic" volume="0.3"
