--- a/index.html
+++ b/index.html
@@ -117,11 +117,18 @@
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
+    <a class="mainlink" href="https://www.cngal.org/" target=""_blank>中文GalGame资源站</a>
     </br>
+   <!--弹幕类-->
+    <a class="mainlink" href="http://www.bilibili.com" target="_blank">哔哩哔哩</a>
+    <a class="mainlink" href="http://www.acfun.tv/" target="_blank">AcFun</a>
+  <a class="mianlink" href="" target="_blank"></a>
+  <!--音乐类-->
     <a class="mainlink" href="http://www.xuekouqin.com/" target="_blank">学口琴音乐网</a>
     <a href="http://www.xuekouqin.com/rumen/fuyin/202.html" target="_blank">口琴手振音走法</a>
     <a href="https://www.zhaogepu.com/" target="_blank">找歌谱网</a>
     <a href="https://www.zhaogepu.com/jianpu/120730.html" target="_blank">团子大家族简谱</a>
+    <a href="http://music.163.com/" target="_blank">网易云音乐</a>
   <!--ACG社交类-->
   <a class="mainlink" href="http://iirose.com/" target="_blank">蔷薇花园聊天室</a>
   <a class="mainlink" href="http://www.jpbeta.net/" target="_blank">JPbeta多元化日本文化资讯站</a>
