--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     <a href="http://bangumi.bilibili.com/anime/980" target="_blank">MM一族</a>
     <div>电音推荐</div>
     Rubik China-X China-O China-PiPa 13 months
+   <embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=17680937&page=1" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
   </body>
   
   
