--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
     <div>电音推荐</div>
     Rubik China-X China-O China-PiPa 13 months
    <embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=17680937&page=1" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
-  </body>
+    如果播放器播放不了 请选择IE兼容模式 视频地址：<a href="https://www.bilibili.com/video/av17680937/" target="_blank"></a>
+    </body>
   
   
 </html>
